--- a/source/scss/cagov/search.scss
+++ b/source/scss/cagov/search.scss
@@ -791,3 +791,12 @@ GOOGLE CUSTOM SEARCH CUSTOMIZATION OVERRIDES
         padding: 0 10px 0 10px;
     }
 }
+
+@media (max-width: $screen-xs-max) {
+    .gsc-search-button .ca-gov-icon-search {
+        font-size: 34px !important;
+    }
+    .search-container #Search .close-search {
+        font-size: 34px !important;
+    }
+}
